// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forms: FormValidationMessage: [ prop: containerStyle ] enzyme-mount: snapshot 1`] = `
<FormValidationMessage
  containerStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Array [
        144,
        Object {
          "backgroundColor": "#2ff",
          "padding": 5,
        },
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingBottom-1inuy60 rn-position-bnwqim"
      style={
        Object {
          "backgroundColor": "rgba(34,255,255,1)",
          "paddingLeft": "5px",
          "paddingRight": "5px",
          "paddingTop": "5px",
        }
      }
    >
      <TextElement
        style={
          Array [
            145,
            undefined,
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                145,
                undefined,
                undefined,
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
          >
            bad things
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormValidationMessage>
`;

exports[`Forms: FormValidationMessage: [ prop: containerStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingBottom-1inuy60 rn-position-bnwqim"
  style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-left:5px;"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
  >
    bad things
  </div>
</div>
`;

exports[`Forms: FormValidationMessage: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      144,
      Object {
        "backgroundColor": "#2ff",
        "padding": 5,
      },
    ]
  }
>
  <TextElement
    style={
      Array [
        145,
        undefined,
        undefined,
      ]
    }
  >
    bad things
  </TextElement>
</View>
`;

exports[`Forms: FormValidationMessage: [ prop: fontFamily ] enzyme-mount: snapshot 1`] = `
<FormValidationMessage
  fontFamily="Courier New"
>
  <View
    style={
      Array [
        144,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
    >
      <TextElement
        style={
          Array [
            145,
            undefined,
            Object {
              "fontFamily": "Courier New",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                145,
                undefined,
                Object {
                  "fontFamily": "Courier New",
                },
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "fontFamily": "Courier New",
              }
            }
          >
            bad things
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormValidationMessage>
`;

exports[`Forms: FormValidationMessage: [ prop: fontFamily ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="font-family:Courier New;"
  >
    bad things
  </div>
</div>
`;

exports[`Forms: FormValidationMessage: [ prop: fontFamily ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      144,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Array [
        145,
        undefined,
        Object {
          "fontFamily": "Courier New",
        },
      ]
    }
  >
    bad things
  </TextElement>
</View>
`;

exports[`Forms: FormValidationMessage: [ prop: labelStyle ] enzyme-mount: snapshot 1`] = `
<FormValidationMessage
  labelStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Array [
        144,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
    >
      <TextElement
        style={
          Array [
            145,
            Object {
              "backgroundColor": "#2ff",
              "padding": 5,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Array [
              64,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                145,
                Object {
                  "backgroundColor": "#2ff",
                  "padding": 5,
                },
                undefined,
              ],
            ]
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingBottom-1inuy60 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "backgroundColor": "rgba(34,255,255,1)",
                "paddingLeft": "5px",
                "paddingRight": "5px",
                "paddingTop": "5px",
              }
            }
          >
            bad things
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormValidationMessage>
`;

exports[`Forms: FormValidationMessage: [ prop: labelStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-6okth3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-1g94qm0 rn-paddingBottom-1inuy60 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-left:5px;"
  >
    bad things
  </div>
</div>
`;

exports[`Forms: FormValidationMessage: [ prop: labelStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      144,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Array [
        145,
        Object {
          "backgroundColor": "#2ff",
          "padding": 5,
        },
        undefined,
      ]
    }
  >
    bad things
  </TextElement>
</View>
`;
